--- a/arch/arm64/configs/a71_eur_open_defconfig
+++ b/arch/arm64/configs/a71_eur_open_defconfig
@@ -6638,3 +6638,5 @@ CONFIG_STACKDEPOT=y
 CONFIG_STACK_HASH_ORDER_SHIFT=12
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
+
+CONFIG_WIREGUARD=y
